# serve-ai

./: README.md  README.ru.md  benchmark.py  engines.py  flake.nix  hardware.py  models.py  pyproject.toml  serve.py
.omg/state/: learn-watch.json  mode.json  reasoning.json  session-lock.json  taskboard.md  workspace.json
docs/: architecture_review.md
