[project]
name = "serve"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "llama-cpp-python>=0.3.22",
    "psutil>=7.2.2",
    "requests>=2.33.1",
    "rich>=15.0.0",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.8.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
